Fix button width on mobile

--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -24,7 +24,7 @@ button, a[button], div[button] {
 	}
 
 	@include media(max-width-642) {
-		width:90%;
+		width:100%;
 	}
 
 
